--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <li><a class="project-tile" href="https://tanicoding.github.io/Tribute-page/" target="_blank">Tribute Page</a></li>
       <li><a class="project-tile" href="https://tanicoding.github.io/Product-landing-page/" target="_blank">Product Landing Page</a></li>
       <li><a class="project-tile" href="https://tanicoding.github.io/Tech-docum/" target="_blank">Technical Documentation</a></li>
+      <li><a class="project-tile" href="https://tanicoding.github.io/Portfolio/" target="_blank">Portfolio</a></li>
     </ul>
   </section>
 
